# COMP3000-Automatic-Vibration-Alarm-Adjustments

./: .gitignore  .gitmodules  README.md  docker-compose.yml
CUDA-Model/: CMakeLists.txt  conanfile.txt  main.cpp
CUDA-Model/Model/: CMakeLists.txt  CudaAdder.cu  CudaAdder.h  Server.cpp  Server.h
CUDA-Model/Model/Crow/: crow.h
CUDA-Model/Model/SerialisableTypes/: Generators.h  MatrixInputs.h  MatrixResponse.h  helper.h
CUDA-Model/Tests/: CMakeLists.txt  tests.cpp
Middleware/: CMakeLists.txt  conanInstalls.ps1  conanfile.txt  main.cpp
Middleware/Alarming/: AlarmCalculatorFactory.cpp  AlarmCalculatorFactory.h  AlarmHandler.cpp  AlarmHandler.h  AlarmOrchestrator.cpp  AlarmOrchestrator.h  AlarmThread.cpp  AlarmThread.h  CMakeLists.txt  IAlarmCalculatorFactory.cpp  IAlarmCalculatorFactory.h  SOM.h
Middleware/Alarming/Calculators/: AlarmCalc.cpp  AlarmCalc.h  AlarmCalcFactory.cpp  AlarmCalcFactory.h  BasicAutomaticAlarmCalculator.cpp  BasicAutomaticAlarmCalculator.h  FixedAlarmCalculator.cpp  FixedAlarmCalculator.h  IAlarmCalc.h  IAlarmCalcFactory.h  IAlarmCalculator.cpp  IAlarmCalculator.h  ISOLevelAlarmCalculator.cpp  ISOLevelAlarmCalculator.h  StateAwareAutomaticAlarmCalculator.cpp  StateAwareAutomaticAlarmCalculator.h
Middleware/Alarming/Statistics/: AlarmStatistics.cpp  AlarmStatistics.h  BasicStatisticsGenerator.cpp  BasicStatisticsGenerator.h  IAlarmStatistics.h  IStatsCalcFactory.h  LearningModel.h  MLDataAggregator.cpp  MLDataAggregator.h  SOM.cpp  SOM.h  SOMLearningFunctions.h  SOMStateDetector.cpp  SOMStateDetector.h  StateInterpretter.cpp  StateInterpretter.h  StateStatisticsGenerator.cpp  StateStatisticsGenerator.h  StatsCalcFactory.cpp  StatsCalcFactory.h
Middleware/AlarmingTests/: AlarmHandlerTests.cpp  CMakeLists.txt  MLAggregatorTests.cpp  MachineLearningTests.cpp  StateInterpretterTests.cpp  StatisticsTests.cpp  alarmTests.cpp
Middleware/AlarmingTests/Mocks/: AllMocks.h
Middleware/AlarmingTests/Stubs/: StubClock.h  StubConfigurationAccess.h  StubDataAccess.cpp  StubDataAccess.h  StubStatistics.h
Middleware/Database/: AlarmStorage.cpp  AlarmStorage.h  CMakeLists.txt  ConfigStorage.cpp  ConfigStorage.h  DataStorage.cpp  DataStorage.h  Database.cpp  Database.h  DatabaseFactory.cpp  DatabaseFactory.h  DatabaseInitialiser.cpp  DatabaseInitialiser.h  IAlarmStorage.h  IConfigurationAccess.h  IDataAccess.h  IDatabase.h  IDatabaseFactory.h  IStateStorage.h  IStatistics.h  StateStorage.cpp  StateStorage.h  StatisticsStorage.cpp  StatisticsStorage.h  TestDatabase.h  database_statements.h
Middleware/Database/Helpers/: sqlite3pp.h  sqlite3pp.ipp
Middleware/DatabaseTests/: AlarmStorageTests.cpp  CMakeLists.txt  ConfigStorageTests.cpp  DataStorageTests.cpp  DatabaseInitialiserTests.cpp  DatabaseTests.cpp  MockDatabaseFactory.h
Middleware/DatabaseTests/Mocks/: AllMocks.h
Middleware/MachineLearningTests/: CMakeLists.txt  MachineLearningTests.cpp
Middleware/REST Interface/: AlternativeServer.cpp  AlternativeServer.h  AnotherAlternativeServer.cpp  AnotherAlternativeServer.h  Conversions.cpp  Conversions.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  crow.h
Middleware/REST Interface/Alarming/: ICalculator.cpp  ICalculator.h
Middleware/REST Interface/Model/: alarmTypes.h  stateTypes.h  types.h
Middleware/REST Interface/NetworkRequestHandlers/: AddStatePeriodRequest.cpp  AddStatePeriodRequest.h  AlarmActivationsRequest.cpp  AlarmActivationsRequest.h  AlarmSettingsRequest.cpp  AlarmSettingsRequest.h  AvailableDataTypesRequest.h  CurrentAlarmStateRequest.cpp  CurrentAlarmStateRequest.h  CurrentTimeRequest.cpp  GetAlarmLevelHistory.h  GetDataRequest.cpp  GetDataRequest.h  GetSitesRequest.cpp  GetSitesRequest.h  GetStatePeriodsRequest.cpp  GetStatePeriodsRequest.h  MachineInformationRequest.cpp  MachineInformationRequest.h  SiteInformationRequest.cpp  SiteInformationRequest.h  all.h
Middleware/REST Interface/Utils/: CrowExtractionHelpers.h
Middleware/RESTInterface/: CMakeLists.txt  Conversions.cpp  Conversions.h  IServer.h  Server.cpp  Server.h
Middleware/RESTInterface/NetworkRequestHandlers/: AddStatePeriodRequest.cpp  AddStatePeriodRequest.h  AlarmActivationsRequest.cpp  AlarmActivationsRequest.h  AlarmSettingsRequest.cpp  AlarmSettingsRequest.h  AvailableDataTypesRequest.cpp  AvailableDataTypesRequest.h  ChannelInformationRequest.cpp  ChannelInformationRequest.h  CurrentAlarmStateRequest.cpp  CurrentAlarmStateRequest.h  CurrentTimeRequest.cpp  CurrentTimeRequest.h  GetAlarmLevelHistory.cpp  GetAlarmLevelHistory.h  GetDataRequest.cpp  GetDataRequest.h  GetDataTimes.cpp  GetDataTimes.h  GetSitesRequest.cpp  GetSitesRequest.h  GetStatePeriodsRequest.cpp  GetStatePeriodsRequest.h  HelloWorldRequest.cpp  HelloWorldRequest.h  MachineInformationRequest.cpp  MachineInformationRequest.h  SiteInformationRequest.cpp  SiteInformationRequest.h  TypeInformationRequest.cpp  TypeInformationRequest.h  all.h
Middleware/RESTInterface/Utils/: CrowExtractionHelpers.cpp  CrowExtractionHelpers.h  CrowUtils.cpp  CrowUtils.h  crow.h  include_crow.h
Middleware/RestInterfaceTests/: AlarmActivationsTest.cpp  AlarmSettingsRequestTests.cpp  AllMocks.h  CMakeLists.txt  CurrentAlarmState.cpp  RestInterfaceTests.cpp
Middleware/Types/: alarmTypes.h  stateTypes.h  types.h
Middleware/Utils/: CMakeLists.txt  IClock.cpp  IClock.h  InternalClock.cpp  InternalClock.h  RealClock.cpp  RealClock.h  STLExtensions.cpp  STLExtensions.h  crow.h  include_crow.h  spdloghelper.h
dataacquisition/: dataacquisition.sln
dataacquisition/DataAcquisitionTests/: DataAcquisitionTests.csproj  Tests.cs  packages.config
dataacquisition/dataacquisition/: App.config  Database.cs  Extractor.cs  IDatabase.cs  Program.cs  dataacquisition.csproj  packages.config
database/: commands.txt
gui/: README.md  jest.config.js  jest.tsconfig.json  package-lock.json  package.json
gui/Components/: AlarmStateItem.tsx  CombineDataSources.ts  Graph.tsx  OuterPage.tsx
gui/Stuff/: Copyright.tsx  Link.tsx  MuiTheme.ts  ProTip.tsx
gui3/: .eslintcache  README.md  package-lock.json  package.json
(+56 files in other folders)
